tests/compile_fail/state/state_impl_on_qualified.stderr
error: `moku::State` must be implemented on a plain struct
  --> tests/compile_fail/state/state_impl_on_qualified.rs:20:33
   |
20 |     impl State<BlinkyState> for super::blinky::Bottom {
   |                                 ^^^^^
